--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #060;
+  color: rgb(9, 10, 9);
 }
 
 /*
@@ -10,7 +10,7 @@ body {
  */
 
 header {
-  background-color: #DFB887;
+  background-color: #3b3a39;
   height: 35px;
   width: 100%;
   opacity: .9;
@@ -41,13 +41,21 @@ header h1.logo:hover {
 
 div.home {
   padding: 10px 0 30px 0;
-  background-color: #E6E6FA;
+  background-color: #07076e;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
 }
 
 div.about {
+  padding: 10px 0 30px 0;
+  background-color: #E6E6FA;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+}
+
+div.contact {
   padding: 10px 0 30px 0;
   background-color: #E6E6FA;
   -webkit-border-radius: 6px;
@@ -85,6 +93,6 @@ h3 {
 }
 
 .menu li a {
-  color: #444;
+  color: rgb(247, 238, 238);
   text-decoration: none;
 }
