--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,7 +10,7 @@ body {
  */
 
 header {
-  background-color: #3b3a39;
+  background-color: #080808;
   height: 35px;
   width: 100%;
   opacity: .9;
