--- a/static/css/main.css
+++ b/static/css/main.css
@@ -41,7 +41,7 @@ header h1.logo:hover {
 
 div.home {
   padding: 10px 0 30px 0;
-  background-color: #07076e;
+  background-color: #E6E6FA;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
@@ -56,6 +56,14 @@ div.about {
 }
 
 div.contact {
+  padding: 10px 0 30px 0;
+  background-color: #E6E6FA;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+}
+
+div.photos {
   padding: 10px 0 30px 0;
   background-color: #E6E6FA;
   -webkit-border-radius: 6px;
