--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,6 +17,8 @@
               <li><a href="{{ url_for('home') }}">Home</a></li>
               <li><a href="{{ url_for('about') }}">About</a></li>
               <li><a href="{{ url_for('contact') }}">Contact</a></li>
+              <li><a href="{{ url_for('photos') }}">Photos</a></li>
+
             </ul>
           </nav></strong
         >
